More spacing fixes

--- a/TheConsultancyFirm/Styles/abstracts/_pagination.scss
+++ b/TheConsultancyFirm/Styles/abstracts/_pagination.scss
@@ -33,7 +33,7 @@
 
 #paging {
     margin-top: 30px;
-    margin-bottom: 100px;
+    margin-bottom: 70px;
 
     .pagearrow {
         padding: 15px;
