--- a/TheConsultancyFirm/Styles/partials/_vacancyOverview.scss
+++ b/TheConsultancyFirm/Styles/partials/_vacancyOverview.scss
@@ -2,7 +2,7 @@
 
 .vacancyContainer {
     text-align: center;
-    margin-bottom: 60px;
+    margin: 60px 0;
 
     a{
         text-decoration:none;
